// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextForEvent TextForPinnedEvent mentions message when a single message was pinned, with multiple previously pinned messages 1`] = `
<span>
  <span>
    @foo:example.com pinned 
    <a
      onClick={[Function]}
    >
      a message
    </a>
     to this room. See all 
    <a
      onClick={[Function]}
    >
      pinned messages
    </a>
    .
  </span>
</span>
`;

exports[`TextForEvent TextForPinnedEvent mentions message when a single message was pinned, with no previously pinned messages 1`] = `
<span>
  <span>
    @foo:example.com pinned 
    <a
      onClick={[Function]}
    >
      a message
    </a>
     to this room. See all 
    <a
      onClick={[Function]}
    >
      pinned messages
    </a>
    .
  </span>
</span>
`;

exports[`TextForEvent TextForPinnedEvent mentions message when a single message was unpinned, with a single message previously pinned 1`] = `
<span>
  <span>
    @foo:example.com unpinned 
    <a
      onClick={[Function]}
    >
      a message
    </a>
     from this room. See all 
    <a
      onClick={[Function]}
    >
      pinned messages
    </a>
    .
  </span>
</span>
`;

exports[`TextForEvent TextForPinnedEvent mentions message when a single message was unpinned, with multiple previously pinned messages 1`] = `
<span>
  <span>
    @foo:example.com unpinned 
    <a
      onClick={[Function]}
    >
      a message
    </a>
     from this room. See all 
    <a
      onClick={[Function]}
    >
      pinned messages
    </a>
    .
  </span>
</span>
`;

exports[`TextForEvent TextForPinnedEvent shows generic text when multiple messages were pinned 1`] = `
<span>
  <span>
    @foo:example.com changed the 
    <a
      onClick={[Function]}
    >
       
      pinned messages
       
    </a>
     for the room.
  </span>
</span>
`;

exports[`TextForEvent TextForPinnedEvent shows generic text when multiple messages were unpinned 1`] = `
<span>
  <span>
    @foo:example.com changed the 
    <a
      onClick={[Function]}
    >
       
      pinned messages
       
    </a>
     for the room.
  </span>
</span>
`;
